--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <br>
 
 <h1 style="font-family:verdana;">ACA UNA FOTO DEL PLATO TERMINADO</h1>
-<img src="./imagenes/LOCRO.jpg" alt="Porcion de locro">
+<img src="./Imagenes/LOCRO.jpg" alt="Porcion de locro">
 <br>
 <br> <audio src="">
 
