--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>LIBRO DE RECETAS</title>
+    <link rel="stylesheet" href="./css/estilo.css">
   </head>
   <body>
-    <h1 style="font-family:verdana;">BIENVENIDOS</h1>
+    <h1 style="font-family:verdana;"class="tituloprincipal1">BIENVENIDOS</h1>
     <h2 style="font-family:verdana;">El día de hoy vamos a preparar: LOCRO ARGENTINO</h2>
 
     <p style="font-family:verdana;"> El locro es un plato muy típico del 25 de mayo, nuestra  -o una de nuestras- fechas patrias). Este plato tiene muchas maneras de preparacion. Tambien pueden cambiar algunos ingredientes, pero eso es a gusto de cada persona. El día de hoy lo vamos a realizar en seis sencillos pasos.</p>
@@ -13,9 +14,9 @@
 <br>
 <br>
 
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26084341.917257074!2d-81.63269824190759!3d-37.05453362430733!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccaf5f5fdc667%3A0x3d2f77992af00fa8!2sArgentina!5e0!3m2!1ses-419!2sar!4v1665805833562!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+<iframe height="300" width="200" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26084341.917257074!2d-81.63269824190759!3d-37.05453362430733!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccaf5f5fdc667%3A0x3d2f77992af00fa8!2sArgentina!5e0!3m2!1ses-419!2sar!4v1665805833562!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-<h1 style="color:#009688;" style="font-family:verdana;">INGREDIENTES</h1>
+<h1 class="ingredientes" style="font-family:verdana;">INGREDIENTES</h1>
 
 
   <ul style="font-family:verdana;">
@@ -36,7 +37,7 @@
 
 
   </ul>
-  <h1 style="font-family:verdana">MODO DE PREPARACION</h1>
+  <h1 style="font-family:verdana" class="modoprep">MODO DE PREPARACION</h1>
 
   <ol style="font-family:verdana;">
     <li> Preparar todos los ingredientes para el locro. Las carnes cortalas como te indico en el video (en trozos pequeños), las verduras en rodajas bien bien finitas, la calabaza en cubos y una parte rallada y los porotos y el maíz remojados desde la noche anterior.</li>
@@ -52,10 +53,14 @@
 
 <br>
 
-<h1 style="font-family:verdana;">ACA UNA FOTO DEL PLATO TERMINADO</h1>
-<img src="./Imagenes/LOCRO.jpg" alt="Porcion de locro">
+<h1 style="font-family:verdana;" class="titulofotoplato">ACA UNA FOTO DEL PLATO TERMINADO</h1>
+<img height="400" width="500" src="./Imagenes/LOCRO.jpg" alt="Porcion de locro">
 <br>
-<br> <audio src="">
+
+<a href="https://www.youtube.com/" target="_blank"> Enlace a YouTube</a>
+<br>
+<a href="masrecetas.html" target="_blank">Mas recetas como esta...</a>
+<br>
 
 </audio>
 
