--- a/index.html
+++ b/index.html
@@ -6,37 +6,42 @@
     <link rel="stylesheet" href="./css/estilo.css">
   </head>
   <body>
-    <header>
-      <h1 style="font-family:verdana;"class="tituloprincipal1">BIENVENIDOS</h1>
-      <h2 style="font-family:verdana;">El día de hoy vamos a preparar: LOCRO ARGENTINO</h2>
+         <header>
 
-      <p style="font-family:verdana;"> El locro es un plato muy típico del 25 de mayo, nuestra  -o una de nuestras- fechas patrias). Este plato tiene muchas maneras de preparacion. Tambien pueden cambiar algunos ingredientes, pero eso es a gusto de cada persona. El día de hoy lo vamos a realizar en seis sencillos pasos.</p>
-      <br> <b> Sobre las porciones de esta receta de locro les digo: es para 6-8 personas y es lo MÍNIMO que podés hacer por éste motivo: <b> lleva tantos tipos de carne y tal que no podés hacer menos que esto.
-    </header>
+
+      </div>   <img class="logopag" src="./Imagenes/ludmilogo.png" alt="Logo">
+          <h1 class="tituloprincipal1">Ludmila Cocina</h1>
+
+
+
+          <div class="Enlacesredes">
+  <a href="https://es-la.facebook.com/login/device-based/regular/login/" target="_blank"><img class="iconoface" src="./Imagenes/iconoface.png" alt="facebook"></a>
+
+  <a href="https://www.instagram.com/accounts/login/" target="_blank"> <img class="iconoinstagram"src="./Imagenes/iconoinsta.png" alt="Instagram"></a>
+
+  <a href="https://twitter.com/i/flow/signup" target="_blank"><img class="iconotwitter" src="./Imagenes/iconotw.png" alt="Twitter"></a>
+
+</div>
+        </header>
+
+
 
 <br>
 <br>
-<nav>
-  <a href="https://www.youtube.com/" target="_blank"> Enlace a YouTube</a>
-  <br>
-  <a href="masrecetas.html" target="_blank">Mas recetas como esta...</a>
-   <br>
-  <a href="https://www.paulinacocina.net/como-hacer-milanesas-receta-y-trucos-imperdibles/5303" target="_blank"> Receta de milanesas</a>
-  <br>
-  <a href="https://www.paulinacocina.net/como-hacer-empanadas-de-carne/9220" target="_blank"> Receta de empanadas de carne</a>
-  <br>
-  <a href="https://www.paulinacocina.net/como-hacer-panqueques-con-dulce-de-leche/9782" target="_blank"> Receta de panqueques con dulce de leche</a>
-  <br>
-  <a href="https://www.paulinacocina.net/budin-de-pan-4-pasos/10866" target="_blank"> Receta de budin de pan</a>
-  <br>
+<h2>El día de hoy vamos a preparar: LOCRO ARGENTINO</h2>
+
+<p> El locro es un plato muy típico del 25 de mayo, nuestra  -o una de nuestras- fechas patrias). Este plato tiene muchas maneras de preparacion. Tambien pueden cambiar algunos ingredientes, pero eso es a gusto de cada persona. El día de hoy lo vamos a realizar en seis sencillos pasos.</p>
+
+  <br> <b> Sobre las porciones de esta receta de locro les digo: es para 6-8 personas y es lo MÍNIMO que podés hacer por éste motivo: <b> lleva tantos tipos de carne y tal que no podés hacer menos que esto.
 
 </nav>
 <br>
 <section>
-  <h1 class="ingredientes" style="font-family:verdana;">INGREDIENTES</h1>
+
+  <h1 class="ingredientes">INGREDIENTES</h1>
 
 
-    <ul style="font-family:verdana;">
+    <ul>
     <li> 250g. de porotos blancos</li>
     <li> 250g. de maíz blanco partido</li>
     <li> 1 chorizo colorado</li>
@@ -51,13 +56,13 @@
     <li> 1/2 calabaza</li>
     <li> 1/2 morrón rojo (para la salsita)</li>
     <li> Condimentos: sal, pimienta, comino, pimentón, ají molido, orégano</li>
-</section>
-<br>
-<aside>
-</ul>
-<h1 style="font-family:verdana" class="modoprep">MODO DE PREPARACION</h1>
 
-<ol style="font-family:verdana;">
+<br>
+
+</ul>
+<h1 class="modoprep">MODO DE PREPARACION</h1>
+
+<ol>
   <li> Preparar todos los ingredientes para el locro. Las carnes cortalas como te indico en el video (en trozos pequeños), las verduras en rodajas bien bien finitas, la calabaza en cubos y una parte rallada y los porotos y el maíz remojados desde la noche anterior.</li>
   <li> Desgrasar el chorizo y el cuerito en una olla y el chorizo colorado en otra. Lo ponés al fuego y lo dejás hervir 10 minutos o 15. Tanto el chorizo como el chorizo colorado podés desgrasarlos enteros, sin cortar.</li>
   <li> Locro blanco: poner en una olla al fuego la panceta, lsa carnes, y el chorizo ya ccocido, y dejar hasta que largue parte de su grasa. Agregar aceite de oliva si hace falta y saltear ahí la cebolla, el puerro y la cebolla de verdeo hasta que estén blandas. Una vez que ya está agregar el maíz y los porotos y cubrí con agua. Es importante que el agua no sea la misma que de remojo. Tapar y dejar cocinar 1 hora y media en olla común (revolviendo de vez en cuando y viendo si le falta más agua) o 1/2 hora en olla a presión.</li>
@@ -65,43 +70,78 @@
   <li> La salsita: picar el morrón, 1 cebolla de verdeo y 1 cebolla común bien bien finitos. Agregar ají molido (bastante), pimentón y orégano. Cocinar a fuego bajo en bastante aceite de oliva hasta que esté bien blandita la cebolla.</li>
   <li> Espesar y servir. 10 minutos antes de servir, agregar la calabaza rallada y cocinar. En ésta receta de locro, éste último paso cumplirá la función de espesarlo. Servir con la salsa encima y la parte verde de la cebolla de verdeo picada.</li>
 </ol>
-</aside>
+
+<h1 class="titulofotoplato">ACA UNA FOTO DEL PLATO TERMINADO</h1>
+<img class="locroplatito" height="400" width="500" src="./Imagenes/LOCRO.jpg" alt="Porcion de locro">
 <br>
 
-<footer>
-  <h1> ENLACES A NUESTRAS REDES:</h1>
-<a href="https://es-la.facebook.com/login/device-based/regular/login/" target="_blank"><img class="iconoface" src="./Imagenes/iconoface.png" alt="facebook"></a>
-
-<a href="https://www.instagram.com/accounts/login/" target="_blank"> <img class="iconoinstagram"src="./Imagenes/iconoinsta.png" alt="Instagram"></a>
-
-<a href="https://twitter.com/i/flow/signup" target="_blank"><img class="iconotwitter" src="./Imagenes/iconotw.png" alt="Twitter"></a>
-
-</footer>
-
+</section>
 <br>
+
 
 
 <a href="https://api.whatsapp.com/send?phone=03412283130" target="_blank"><img class="iconowspp" src="./Imagenes/iconowsp.png"  alt="Nuestro WhatsApp"></a>
 
+
+
+<aside class="mapavideo">
+
+
 <iframe height="300" width="200" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26084341.917257074!2d-81.63269824190759!3d-37.05453362430733!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccaf5f5fdc667%3A0x3d2f77992af00fa8!2sArgentina!5e0!3m2!1ses-419!2sar!4v1665805833562!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 
-
-
-
-<br>
-
 <iframe width="500" height="300" src="https://www.youtube.com/embed/ZBlLDfIbmbw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-<br>
-
-<h1 style="font-family:verdana;" class="titulofotoplato">ACA UNA FOTO DEL PLATO TERMINADO</h1>
-<img height="400" width="500" src="./Imagenes/LOCRO.jpg" alt="Porcion de locro">
-<br>
+</aside>
 
 <br>
 
-</audio>
+
+
+
+<nav>
+  <a href="https://www.youtube.com/" target="_blank"> Enlace a YouTube</a>
+  <br>
+  <a href="masrecetas.html" target="_blank">Mas recetas como esta...</a>
+   <br>
+  <a href="https://www.paulinacocina.net/como-hacer-milanesas-receta-y-trucos-imperdibles/5303" target="_blank"> Receta de milanesas</a>
+  <br>
+  <a href="https://www.paulinacocina.net/como-hacer-empanadas-de-carne/9220" target="_blank"> Receta de empanadas de carne</a>
+  <br>
+  <a href="https://www.paulinacocina.net/como-hacer-panqueques-con-dulce-de-leche/9782" target="_blank"> Receta de panqueques con dulce de leche</a>
+  <br>
+  <a href="https://www.paulinacocina.net/budin-de-pan-4-pasos/10866" target="_blank"> Receta de budin de pan</a>
+  <br>
+
+<footer>
+
+<div class="mapa barrio">
+
+  <iframe class="mapabarrio" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d418.3740727492364!2d-60.65410993048351!3d-32.977597512401886!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7ab91179e2c21%3A0x8e0c821629d83425!2sMatheu%2C%20S2000%20Rosario%2C%20Santa%20Fe!5e0!3m2!1ses-419!2sar!4v1666998250565!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+
+</div>
+
+</div>
+<div class="redesenlaces">
+  <a href="https://es-la.facebook.com/login/device-based/regular/login/" target="_blank"><img class="iconoface" src="./Imagenes/iconoface.png" alt="facebook"></a>
+
+  <a href="https://www.instagram.com/accounts/login/" target="_blank"> <img class="iconoinstagram"src="./Imagenes/iconoinsta.png" alt="Instagram"></a>
+
+  <a href="https://twitter.com/i/flow/signup" target="_blank"><img class="iconotwitter" src="./Imagenes/iconotw.png" alt="Twitter"></a>
+
+</div>
+
+<div class="datos">
+<h1>Ludmila Martinez</h1>
+<h2>Ludmilam.martinez@outlook.com</h2>
+<h3>Programacion Web</h3>
+
+</div>
+</footer>
+
+<br>
+
 
   </body>
 </html>
