--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title>LIBRO DE RECETAS</title>
     <link rel="stylesheet" href="./css/estilo.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
   </head>
   <body>
          <header>
@@ -24,7 +27,20 @@
 </div>
         </header>
 
+<nav>
+  <a href="contactos.html">Mas recetas como esta...</a>
 
+   <div class="enlacesreceta">
+     <a href="https://www.paulinacocina.net/como-hacer-milanesas-receta-y-trucos-imperdibles/5303" target="_blank"> Receta de milanesas</a>
+     <br>
+     <a href="https://www.paulinacocina.net/como-hacer-empanadas-de-carne/9220" target="_blank"> Receta de empanadas de carne</a>
+     <br>
+     <a href="https://www.paulinacocina.net/como-hacer-panqueques-con-dulce-de-leche/9782" target="_blank"> Receta de panqueques con dulce de leche</a>
+     <br>
+     <a href="https://www.paulinacocina.net/budin-de-pan-4-pasos/10866" target="_blank"> Receta de budin de pan</a>
+   </div>
+
+</nav>
 
 <br>
 <br>
@@ -34,9 +50,9 @@
 
   <br> <b> Sobre las porciones de esta receta de locro les digo: es para 6-8 personas y es lo MÍNIMO que podés hacer por éste motivo: <b> lleva tantos tipos de carne y tal que no podés hacer menos que esto.
 
-</nav>
+
 <br>
-<section>
+<section class="contenido">
 
   <h1 class="ingredientes">INGREDIENTES</h1>
 
@@ -72,7 +88,10 @@
 </ol>
 
 <h1 class="titulofotoplato">ACA UNA FOTO DEL PLATO TERMINADO</h1>
-<img class="locroplatito" height="400" width="500" src="./Imagenes/LOCRO.jpg" alt="Porcion de locro">
+<div class="imglocgro">
+  <img class="locroplatito" height="400" width="500" src="./Imagenes/LOCRO.jpg" alt="Porcion de locro">
+</div>
+
 <br>
 
 </section>
@@ -84,6 +103,8 @@
 
 
 
+
+
 <aside class="mapavideo">
 
 
@@ -92,14 +113,9 @@
 
 <iframe width="500" height="300" src="https://www.youtube.com/embed/ZBlLDfIbmbw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-</aside>
-
-<br>
 
 
 
-
-<nav>
   <a href="https://www.youtube.com/" target="_blank"> Enlace a YouTube</a>
   <br>
   <a href="masrecetas.html" target="_blank">Mas recetas como esta...</a>
@@ -113,14 +129,19 @@
   <a href="https://www.paulinacocina.net/budin-de-pan-4-pasos/10866" target="_blank"> Receta de budin de pan</a>
   <br>
 
-<footer>
+</aside>
 
-<div class="mapa barrio">
 
-  <iframe class="mapabarrio" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d418.3740727492364!2d-60.65410993048351!3d-32.977597512401886!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7ab91179e2c21%3A0x8e0c821629d83425!2sMatheu%2C%20S2000%20Rosario%2C%20Santa%20Fe!5e0!3m2!1ses-419!2sar!4v1666998250565!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
+
+  <footer>
+
+<div class="mapa_barrio">
+
+     <iframe class="mapabarrio" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d418.3740727492364!2d-60.65410993048351!3d-32.977597512401886!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7ab91179e2c21%3A0x8e0c821629d83425!2sMatheu%2C%20S2000%20Rosario%2C%20Santa%20Fe!5e0!3m2!1ses-419!2sar!4v1666998250565!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 </div>
+
 
 </div>
 <div class="redesenlaces">
@@ -138,7 +159,9 @@
 <h3>Programacion Web</h3>
 
 </div>
-</footer>
+
+
+ </footer>
 
 <br>
 
