--- a/contactos.html
+++ b/contactos.html
@@ -7,62 +7,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   </head>
+
   <body>
 
+ <!-- encabezado -->
     <header>
 
+     <div class="cajalogo" >
 
-   </div>   <img class="logopag" src="./Imagenes/ludmilogo.png" alt="Logo">
+       <img class="logopag" src="./Imagenes/ludmilogo.png" alt="Logo">
+
+     </div>
+
+   <div class="cajatitulopag">
+
      <h1 class="tituloprincipal1">Ludmila Cocina</h1>
 
-
-
-     <div class="Enlacesredes">
-   <a href="https://es-la.facebook.com/login/device-based/regular/login/" target="_blank"><img class="iconoface" src="./Imagenes/iconoface.png" alt="facebook"></a>
-
-   <a href="https://www.instagram.com/accounts/login/" target="_blank"> <img class="iconoinstagram"src="./Imagenes/iconoinsta.png" alt="Instagram"></a>
-
-   <a href="https://twitter.com/i/flow/signup" target="_blank"><img class="iconotwitter" src="./Imagenes/iconotw.png" alt="Twitter"></a>
-
-   </div>
-   </header>
-
-
-     <nav>
-       <a href="index.html"> VOLVER A INICIO</a>
-
-        <div class="enlacesreceta">
-          <a href="https://www.paulinacocina.net/como-hacer-milanesas-receta-y-trucos-imperdibles/5303" target="_blank"> Receta de milanesas</a>
-          <br>
-          <a href="https://www.paulinacocina.net/como-hacer-empanadas-de-carne/9220" target="_blank"> Receta de empanadas de carne</a>
-          <br>
-          <a href="https://www.paulinacocina.net/como-hacer-panqueques-con-dulce-de-leche/9782" target="_blank"> Receta de panqueques con dulce de leche</a>
-          <br>
-          <a href="https://www.paulinacocina.net/budin-de-pan-4-pasos/10866" target="_blank"> Receta de budin de pan</a>
-        </div>
-
-   </nav>
-
-<section>
-
-  <h1>RECETA DE EMPANADAS DE CARNE</h1>
-</section>
-
-
-
-
-
-   <footer>
-
-   <div class="mapa barrio">
-
-     <iframe class="mapabarrio" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d418.3740727492364!2d-60.65410993048351!3d-32.977597512401886!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7ab91179e2c21%3A0x8e0c821629d83425!2sMatheu%2C%20S2000%20Rosario%2C%20Santa%20Fe!5e0!3m2!1ses-419!2sar!4v1666998250565!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-
-
    </div>
 
-   </div>
-   <div class="redesenlaces">
+   <div class="cajaredes">
+
      <a href="https://es-la.facebook.com/login/device-based/regular/login/" target="_blank"><img class="iconoface" src="./Imagenes/iconoface.png" alt="facebook"></a>
 
      <a href="https://www.instagram.com/accounts/login/" target="_blank"> <img class="iconoinstagram"src="./Imagenes/iconoinsta.png" alt="Instagram"></a>
@@ -71,13 +35,76 @@
 
    </div>
 
-   <div class="datos">
-   <h1>Ludmila Martinez</h1>
-   <h2>Ludmilam.martinez@outlook.com</h2>
-   <h3>Programacion Web</h3>
+    </header>
 
-   </div>
-   </footer>
+  <!-- barra de navegacion -->
+
+  <nav>
+
+    <div class="cajacontactos">
+
+        <a href="index.html"> VOLVER A INICIO </a>
+
+    </div>
+
+
+  <div class=" MILANESASBARRA">
+
+       <a href="https://www.paulinacocina.net/como-hacer-milanesas-receta-y-trucos-imperdibles/5303" target="_blank"> MILANESAS </a>
+
+  </div>
+
+  <div class="EMPANADASBARRA">
+
+     <a href="https://www.paulinacocina.net/como-hacer-empanadas-de-carne/9220" target="_blank"> EMPANADAS </a>
+
+  </div>
+
+  <div class="PANQUEQUESBARRA">
+
+    <a href="https://www.paulinacocina.net/como-hacer-panqueques-con-dulce-de-leche/9782" target="_blank"> PANQUEQUES </a>
+
+  </div>
+
+  <div class="BUDINBARRA">
+
+    <a href="https://www.paulinacocina.net/budin-de-pan-4-pasos/10866" target="_blank"> BUDIN DE PAN </a>
+
+  </div>
+
+
+  </nav>
+
+<!-- pie de pagina -->
+
+<footer>
+
+<div class="cajamapabarrio">
+
+  <iframe class="mapabarrio" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d418.3740727492364!2d-60.65410993048351!3d-32.977597512401886!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7ab91179e2c21%3A0x8e0c821629d83425!2sMatheu%2C%20S2000%20Rosario%2C%20Santa%20Fe!5e0!3m2!1ses-419!2sar!4v1666998250565!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+</div>
+
+<div class="cajaredespie">
+
+  <a href="https://es-la.facebook.com/login/device-based/regular/login/" target="_blank"><img class="iconoface" src="./Imagenes/iconoface.png" alt="facebook"></a>
+
+  <a href="https://www.instagram.com/accounts/login/" target="_blank"> <img class="iconoinstagram"src="./Imagenes/iconoinsta.png" alt="Instagram"></a>
+
+  <a href="https://twitter.com/i/flow/signup" target="_blank"><img class="iconotwitter" src="./Imagenes/iconotw.png" alt="Twitter"></a>
+
+</div>
+
+<div class="cajadatos">
+
+  <h1>Ludmila Martinez</h1>
+  <h2>Ludmilam.martinez@outlook.com</h2>
+  <h3>Programacion Web</h3>
+
+</div>
+
+</footer>
+
 
 
   </body>
