--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>LIBRO DE RECETAS</title>
+
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
     <link rel="stylesheet" href="./css/estilo.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content=" Recetas de cocina faciles">
@@ -80,7 +84,7 @@
 
 <!-- Informacion principal -->
 
-<div class="juntitos">
+<div class="flex-container">
 
 <section>
  <div class="cajaintro">
@@ -172,11 +176,75 @@
 
 <div class="audio">
   <audio src="./audios/audio.mp3" controls>
-
   </audio>
+
 </div>
+
 </aside>
+
 </div>
+
+
+<!--cartas -->
+
+<section>
+
+<div class="container">
+
+ <div class="row">
+
+   <div class="col-sm-12 col-md-6 col-lg-3">
+     <div class="card" style="width: 18rem;">
+   <img src="./Imagenes/guiso.jpg" class="card-img-top" alt="guisito">
+   <div class="card-body">
+     <h5 class="card-title">Guiso de carne</h5>
+     <p class="card-text">Vamos a preparar esta delicia en pocos pasos.</p>
+     <a href="https://www.paulinacocina.net/guiso-de-fideos-con-carne/24580" target="_blank" class="btn btn-primary">Ir a receta</a>
+   </div>
+ </div>
+   </div>
+
+   <div class="col-sm-12 col-md-6 col-lg-3">
+     <div class="card" style="width: 18rem;">
+   <img src="./Imagenes/matambre.jpg" class="card-img-top" alt="matambrito">
+   <div class="card-body">
+     <h5 class="card-title">Matambre a la pizza</h5>
+     <p class="card-text">Vamos a preparar esta delicia en pocos pasos.</p>
+     <a href="https://www.paulinacocina.net/matambre-a-la-pizza/21725" target="_blank" class="btn btn-primary">Ir a receta</a>
+   </div>
+ </div>
+   </div>
+
+   <div class="col-sm-12 col-md-6 col-lg-3">
+     <div class="card" style="width: 18rem;">
+   <img src="./Imagenes/estofado.jpg" class="card-img-top" alt="estofadito">
+   <div class="card-body">
+     <h5 class="card-title">Estofado de carne</h5>
+     <p class="card-text">Vamos a preparar esta delicia en pocos pasos.</p>
+     <a href="https://www.paulinacocina.net/estofado-de-carne-de-ternera/21808" target="_blank" class="btn btn-primary">Ir a receta</a>
+   </div>
+ </div>
+   </div>
+
+   <div class="col-sm-12 col-md-6 col-lg-3">
+     <div class="card" style="width: 18rem;">
+   <img src="./Imagenes/arrozpollo.jpg" class="card-img-top" alt="Arroz amarillo">
+   <div class="card-body">
+     <h5 class="card-title">Arroz con pollo</h5>
+     <p class="card-text">Vamos a preparar esta delicia en pocos pasos.</p>
+     <a href="https://www.paulinacocina.net/como-hacer-arroz-con-pollo/8061" target="_blank" class="btn btn-primary">Ir a receta</a>
+   </div>
+ </div>
+   </div>
+
+  </div>
+
+</div>
+
+
+
+
+</section>
 
 
 <!-- pie de pagina -->
@@ -214,5 +282,9 @@
 <a href="https://api.whatsapp.com/send?phone=03412283130" target="_blank"><img class="iconowspp" src="./Imagenes/iconowsp.png"  alt="Nuestro WhatsApp"></a>
 
 
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+
+
   </body>
-</html>
+</html
