--- a/index.html
+++ b/index.html
@@ -12,12 +12,18 @@
     <meta name="description" content=" Recetas de cocina faciles">
     <meta name="keywords" content=" facil, faciles, recetas rapidas, pocos pasos">
     <meta name="author" content=" Ludmila cocina">
+
+  <script>
+
+alert ("¡BIENVENIDO! EN ESTA PAGINA VAS A ENCONTRAR LAS RECETAS MAS RICAS DE ARGENTINA ;)")
+  </script>
+
   </head>
   <body>
 
 <!-- encabezado de pagina -->
 
- <header>
+ <header id="1">
 
   <div class="cajalogo" >
 
@@ -41,41 +47,47 @@
 
 </div>
 
+
+<!-- BOTON MODO NOCHE -->
+
+<button onclick = "noche()"> MODO OSCURO</button>
+
  </header>
+
 
 
 <!-- barra de navegacion -->
 
-<nav>
+<nav id="barra">
 
   <div class="cajacontactos">
 
-      <a href="contactos.html"> CONTACTOS </a>
+      <a id="link1" href="contactos.html"> CONTACTOS </a>
 
   </div>
 
 
 <div class=" MILANESASBARRA">
 
-     <a href="https://www.paulinacocina.net/como-hacer-milanesas-receta-y-trucos-imperdibles/5303" target="_blank"> MILANESAS </a>
+     <a id="link2" href="https://www.paulinacocina.net/como-hacer-milanesas-receta-y-trucos-imperdibles/5303" target="_blank"> MILANESAS </a>
 
 </div>
 
 <div class="EMPANADASBARRA">
 
-   <a href="https://www.paulinacocina.net/como-hacer-empanadas-de-carne/9220" target="_blank"> EMPANADAS </a>
+   <a id="link3" href="https://www.paulinacocina.net/como-hacer-empanadas-de-carne/9220" target="_blank"> EMPANADAS </a>
 
 </div>
 
 <div class="PANQUEQUESBARRA">
 
-  <a href="https://www.paulinacocina.net/como-hacer-panqueques-con-dulce-de-leche/9782" target="_blank"> PANQUEQUES </a>
+  <a id="link4" href="https://www.paulinacocina.net/como-hacer-panqueques-con-dulce-de-leche/9782" target="_blank"> PANQUEQUES </a>
 
 </div>
 
 <div class="BUDINBARRA">
 
-  <a href="https://www.paulinacocina.net/budin-de-pan-4-pasos/10866" target="_blank"> BUDIN DE PAN </a>
+  <a  id="link5" href="https://www.paulinacocina.net/budin-de-pan-4-pasos/10866" target="_blank"> BUDIN DE PAN </a>
 
 </div>
 
@@ -86,7 +98,7 @@
 
 <div class="flex-container">
 
-<section>
+<section id="2">
  <div class="cajaintro">
 
    <h2>El día de hoy vamos a preparar: LOCRO ARGENTINO</h2>
@@ -151,7 +163,7 @@
 
 <!-- barra lateral -->
 
-<aside class="cosascostado">
+<aside id="3" class="cosascostado">
 
 <div class="cosasalcostado">
 
@@ -187,7 +199,7 @@
 
 <!--cartas -->
 
-<section>
+<section id="cartas">
 
 <div class="container">
 
@@ -269,9 +281,7 @@
 
 <div class="cajadatos">
 
-  <h1>Ludmila Martinez</h1>
-  <h2>Ludmilam.martinez@outlook.com</h2>
-  <h3>Programacion Web</h3>
+<button onclick="cartelinfo()"> Copyright </button>
 
 </div>
 
@@ -286,5 +296,12 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
 
+
+<!-- javascript -->
+
+<script src="./js/javascript.js"></script>
+
   </body>
+
+
 </html
